# dummy_ros_pkg

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/dummy/: dummy.hpp
launch/: dummy_cpp.launch
src/: dummy.cpp  dummy_node.cpp
